room-booking-platform/k8s/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
      annotations:
        #sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: booking-app
      imagePullSecrets:
      - name: regcred
      containers:
      - name: booking-service
        image: camelia4/booking-service:2.2  # Remplacez par votre image
        ports:
        - containerPort: 8000
