room-booking-platform/k8s/room-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: room-service
  template:
    metadata:
      labels:
        app: room-service
    spec:
      containers:
       - name: room-service
         image: camelia4/room-service:1.0
