room-booking-platform/k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
