room-booking-platform/k8s/postgres-room-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-room
spec:
  selector:
    app: postgres-room
  ports:
  - port: 5432
    targetPort: 5432
