room-booking-platform/k8s/room-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: room-service
spec:
  selector:
    app: room-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
